--- a/personService/src/main/resources/application-deploy.yml
+++ b/personService/src/main/resources/application-deploy.yml
@@ -6,8 +6,8 @@ spring:
   mail:
     host: smtp.qq.com
     port: 465
-    username: 415229929@qq.com
-    password: heyppppwxujdcahi # smtp授权码
+    username:
+    password:
     properties:
       mail:
         smtp:
