--- a/checkService/src/main/resources/application-prod.yml
+++ b/checkService/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 spring:
   redis:
     database: 0
-    host: 43.138.236.247
+    host: 127.0.0.1
     port: 6379
     password: 6379
     timeout: 1000
@@ -17,10 +17,10 @@ spring:
       max-file-size: 10MB # 最大文件
       max-request-size: 50MB # 最大请求
   mail:
-    host: smtp.qq.com
-    port: 465
-    username: 1833769217@qq.com
-    password: defkkegcyahzfcce # smtp授权码
+    host:
+    port:
+    username:
+    password:
     properties:
       mail:
         smtp:
@@ -35,4 +35,4 @@ grpc:
   serverPort: 8888
 
 email:
-  ip: 43.138.236.247
+  ip:
